fix: author email and test against PHP 8.3

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "Ben Sherred",
-            "email": "AUTHOR_EMAIL"
+            "email": "ben@sherred.co.uk"
         }
     ],
     "require": {
