--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,25 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "RedExplosion\\Sqids\\Tests\\": "tests/"
+            "RedExplosion\\Sqids\\Tests\\": "tests/",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
     "scripts": {
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve"
+        ],
         "lint": "./vendor/bin/pint --config vendor/red-explosion/pint-config/pint.json",
         "test:lint": "./vendor/bin/pint --config vendor/red-explosion/pint-config/pint.json --test",
         "test:types": "./vendor/bin/phpstan analyse --ansi",
