--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,19 @@
 * text=auto
 
+*.blade.php diff=html
+*.css diff=css
+*.html diff=html
+*.md diff=markdown
+*.php diff=php
+
 /.github           export-ignore
 /art               export-ignore
-/docs              export-ignore
 /tests             export-ignore
-/scripts           export-ignore
+/workbench         export-ignore
 .editorconfig      export-ignore
 .gitattributes     export-ignore
 .gitignore         export-ignore
+CHANGELOG.md       export-ignore
 phpstan.neon.dist  export-ignore
 phpunit.xml.dist   export-ignore
 CONTRIBUTING.md    export-ignore
-CHANGELOG.md       export-ignore
-CONTRIBUTING.md    export-ignore
-README.md          export-ignore
