--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     "require": {
         "php": "^8.2",
         "ext-mbstring": "*",
-        "illuminate/contracts": "^10.0",
-        "illuminate/support": "^10.0",
+        "illuminate/contracts": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0",
         "sqids/sqids": "^0.4.1"
     },
     "require-dev": {
         "laravel/pint": "^1.10",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "pestphp/pest": "^2.6",
         "pestphp/pest-plugin-arch": "^2.1",
         "phpstan/phpstan": "^1.10",
