--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,8 +15,8 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ 8.2, 8.3 ]
-                laravel: [ 10, 11 ]
+                php: [ 8.2, 8.3, 8.4 ]
+                laravel: [ 10, 11, 12 ]
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
