--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
     "require": {
         "php": "^8.2",
         "ext-mbstring": "*",
-        "illuminate/contracts": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/contracts": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "sqids/sqids": "^0.4.1"
     },
     "require-dev": {
         "laravel/pint": "^1.10",
-        "orchestra/testbench": "^8.0|^9.0",
-        "pestphp/pest": "^2.6",
-        "pestphp/pest-plugin-arch": "^2.1",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-arch": "^3.0",
         "phpstan/phpstan": "^1.10",
         "red-explosion/pint-config": "^1.1",
         "spatie/laravel-ray": "^1.32"
