--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "require-dev": {
         "laravel/pint": "^1.10",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-arch": "^3.0",
+        "pestphp/pest": "^2.0|^3.0",
+        "pestphp/pest-plugin-arch": "^2.0|^3.0",
         "phpstan/phpstan": "^1.10",
         "red-explosion/pint-config": "^1.1",
         "spatie/laravel-ray": "^1.32"
