--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
             fail-fast: true
             matrix:
                 php: [ 8.4, 8.5 ]
-                laravel: [ 12, 13 ]
+                laravel: [ 12 ]
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
