--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require": {
         "php": "^8.4",
         "ext-mbstring": "*",
-        "illuminate/contracts": "^12.0|^13.0",
-        "illuminate/support": "^12.0|^13.0",
+        "illuminate/contracts": "^12.0",
+        "illuminate/support": "^12.0",
         "sqids/sqids": "^0.5.0"
     },
     "require-dev": {
